--- a/app_surfer/css/style.css
+++ b/app_surfer/css/style.css
@@ -56,6 +56,7 @@ a:hover {
 
 .greyFont{
 	color: #2C3033;
+
 }
 
 
@@ -191,12 +192,15 @@ a:hover {
 
 	margin-top: 47px;
 	margin-left: 15px;
+
 }
 
 .signUpLabel{
 	font-family: "Helvetica Neue";
 	font-size: 30px;
 	vertical-align: middle;
+	text-shadow: 0px 1px 1px #FFFFFF;
+
 }
 
 .controls >input {
@@ -219,16 +223,18 @@ a:hover {
 	font-style: "Helvetica";
 	font-size: 14px;
 	color: #555555;
+	text-shadow: 0px 0px 1px #FFFFFF;
 
 }
 
 .alignSignup{
 	margin-left: -95px;
-	padding-top: -10px;
+	
 	font-style: "Helvetica";
 	font-weight: bold;
 	font-size: 14pt;
 	vertical-align: text-top;
+	text-shadow: 0px 0px 1px #FFFFFF;
 }
 
 
