--- a/assignment_3_rev_2/css/style.css
+++ b/assignment_3_rev_2/css/style.css
@@ -1,6 +1,5 @@
 /*========== All Global declarations classess starts here ==========*/
-h1,h2,h3,h4,h5,h6,div,body,p,a,ul,li,ol,img,input,span
-{
+h1,h2,h3,h4,h5,h6,div,body,p,a,ul,li,ol,img,input,span{
 	margin: 0px;
 	padding: 0px;
 }
@@ -94,7 +93,6 @@ body {
 
 .header{	
 	margin-bottom: 34px;
-
 }
 
 .topHeader {	
@@ -156,10 +154,10 @@ body {
 .navigation ul li a{
 	display: block;
 	height: 40px;
-	line-height: 40px;
+	line-height: 38px;
 	color: #FFFFFF;
 	text-decoration: none;
-	padding: 0px 17px 0px 17px;
+	padding: 0px 16px 0px 17px;
 	-moz-text-shadow: 0.1em 0.1em 0.05em #333333;
 	-ms-text-shadow: 0.1em 0.1em 0.05em #333333;
 	-o-text-shadow: 0.1em 0.1em 0.05em #333333;
@@ -174,10 +172,6 @@ body {
 .navigation ul li #newsearch {
 	float:right;
 }
-
-
-
-
 
 
 /* search button properties start here */
@@ -219,6 +213,7 @@ body {
 }
 
 
+
 .searchButton{
 	background-image: url("../images/search_icon.png");
 	background-repeat: no-repeat;
@@ -234,12 +229,7 @@ body {
 	-ms-border:1px solid;
 	-o-border:1px solid;
 	-webkit-border:1px solid;
-	border:1px solid;
-
-	border-color: #183B7F;
-
-	
-
+	border:1px solid  #183B7F;
 	width: 41px;
 	height: 30px;
 	background-position:center;
@@ -276,7 +266,7 @@ body {
 	-o-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-	box-shadow: 0px 0px 4px #d9dadb;
+	box-shadow: 0px 2px 4px #CACACA;
 	margin-right: 60px;
 }	
 
@@ -322,9 +312,6 @@ body {
 	border-bottom: 3px solid #eebe00;
 }
 
-
-
-
 .whatWeDo{	
 	
 	float: left;
@@ -332,9 +319,7 @@ body {
 	height: 260px;
 	color: #656565;
 	margin-right: 20px;
-	padding-top: 27px;
-
-
+	padding-top: 26px;
 }
 
 .whatWeDo h2 {
@@ -343,7 +328,6 @@ body {
 	margin-bottom: 15px;
 	padding-bottom: 10px;
 }
-
 
 .whatWeDo p {
 	font-size: 13px;
@@ -377,7 +361,7 @@ body {
 	line-height: 18px;
 	font-style: italic;
 	color: #000000;	
-	margin-bottom: 20px;
+	margin-bottom: 18px;
 	list-style: none;	
 }
 
@@ -386,11 +370,13 @@ body {
 	color:#000000;
 	
 }
+.announcements ul li a p{
+	margin-bottom: 3px;
+}
 
 .announcements ul li a:hover{
 	color: #4767B0;
 }
-
 
 .announcements span {
 	font-size: 10px;
@@ -398,7 +384,6 @@ body {
 	font-style: normal;
 	line-height: 16px;
 }
-
 
 .announcements ul li span a{
 	font-size: 10px;
@@ -413,7 +398,7 @@ body {
 /* viewmore properties start here */
 
 .viewMore{
-	padding-top: 8px;
+	padding-top: 5px;
 }
 
 .viewMore a{
@@ -439,8 +424,7 @@ body {
 	line-height: 36px;
 	text-align: center;
 	margin-bottom: 20px;
-	color: #474747;
-	
+	color: #474747;	
 }
 
 .secondFold  ul li a{
@@ -451,7 +435,6 @@ body {
 	display: block;	
 	height: 266px;
 	width: 175px
-
 }
 
 
@@ -463,20 +446,19 @@ body {
 	height:266px;
 	width: 175px;
 
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 
-	-moz-box-shadow: 0px 0px 3px #888888;
-	-ms-box-shadow: 0px 0px 3px #888888;
-	-o-box-shadow: 0px 0px 3px #888888;
-	-webkit-box-shadow: 0px 0px 3px #888888;
-	box-shadow: 0px 0px 3px #888888;
+	-moz-box-shadow: 0px 0px 3px #A0A0A0;
+	-ms-box-shadow: 0px 0px 3px #A0A0A0;
+	-o-box-shadow: 0px 0px 3px #A0A0A0;
+	-webkit-box-shadow: 0px 0px 3px #A0A0A0;
+	box-shadow: 0px 0px 3px #A0A0A0;
 
-	list-style: none;
-	
+	list-style: none;	
 }
 
 .secondFold ul li:first-child{
@@ -488,11 +470,10 @@ body {
 	height:30px;
 	text-align: center;
 	color: #3355AA;
-	margin: 14px 20px 17px 20px;
+	margin: 13px 21px 17px 19px;
 }
 
-.secondFoldContents  img {
-	
+.secondFoldContents  img {	
 	max-height: 200px;
 	max-width: 165px;
 	border-style: none;
@@ -521,7 +502,7 @@ body {
 .footerLinksLeft ul li {
 	float: left;	
 	text-align: center;
-	padding-left: 10px;
+	padding-left: 9px;
 	padding-right: 10px;
 	list-style: none;	
 	padding-top: 13px;
@@ -566,8 +547,7 @@ body {
 	-ms-text-shadow: 0.1em 0.1em 0.05em #000000;
 	-o-text-shadow: 0.1em 0.1em 0.05em #000000;
 	-webkit-text-shadow: 0.1em 0.1em 0.05em #000000;
-	text-shadow: 0.1em 0.1em 0.05em #000000;
-	
+	text-shadow: 0.1em 0.1em 0.05em #000000;	
 }
 
 .footerLine{
@@ -592,24 +572,23 @@ body {
 .footerLinksRight{
 	float: right;
 	margin-bottom: 15px;
+	
 }
 
 .footerLinksRight > ul > li {
 	float:left;	
 	text-align: center;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding-left: 7px;
+	padding-right: 7px;
 	list-style: none;
 	font-size: 11px;
-	padding-top: 18px;
+	line-height: normal;
+	padding-top: 17px;
 	color: #AAAAAA;
-	background-image: url("../images/footer_seperator.png"); 
-	background-repeat: no-repeat;
-	background-position: right bottom;
+	background: url("../images/follow_seperator.png")  no-repeat right bottom; 	
 }
 
 .footerLinksRight ul li:first-child{
-	
 }
 
 
@@ -640,17 +619,26 @@ body {
 .follow{
 	float: right;
 	z-index: 100;
+}
+
+.followUs{
+	float: left;
+	margin-right: 8px;
 	font-size: 11px;
-	line-height: 28px;
+	line-height: 30px;
 	color: #8B8B8B;
 }
 
+
 .follow ul{
-	display: inline;
+	display: block;
+	float: right;
+	padding-top: 6px;
 }
 
-.follow ul li{
-	float:left;
+.follow ul li {
+	display: block;
+	float: left;
 	list-style: none;
 	-moz-text-shadow: 0.1em 0.1em 0.05em #000000;
 	-ms-text-shadow: 0.1em 0.1em 0.05em #000000;
@@ -659,22 +647,24 @@ body {
 	text-shadow: 0.1em 0.1em 0.05em #000000;
 }
 
-.followImg
-{
-	margin-left: 5px;
-
-	-moz-box-shadow: 1px 1px 5px #1A1A1A;
-	-ms-box-shadow: 1px 1px 5px #1A1A1A;
-	-o-box-shadow: 1px 1px 5px #1A1A1A;
-	-webkit-box-shadow: 1px 1px 5px #1A1A1A;
-	box-shadow: 1px 1px 5px #1A1A1A;
-	border-style: none;	
+.follow ul li a{
+	height: 17px;
+	width: 17px;
+	display: block;
+	margin-right: 2px;
 }
 
+.follow ul li:first-child a{
+	background:url("../images/facebook.png") no-repeat;
+}
 
+.follow ul li:nth-child(2) a{
+	background:url("../images/twitter.png") no-repeat;	
+}
 
-
-
+.follow ul li:last-child a{
+	background:url("../images/linkedin.png") no-repeat;	
+}
 
 
 
