--- a/assignment_6/css/style.css
+++ b/assignment_6/css/style.css
@@ -63,54 +63,62 @@ body {
 	font-family: "Roboto Bold";
 	display: block;
 	text-decoration: none;	
+
 }
 
+.header ul li a:hover{
+  color: #0080FF;
+}
 
 .firstChild{
 	padding: 10px 40px 10px 24px;
 	background:url("../images/home.png") no-repeat left;
 	line-height: 40px;
+  color: #444444;
 }
 
 .secondChild{
 	padding: 10px 40px 10px 24px;
 	background:url("../images/how_it_works.png") no-repeat  left;
 	line-height: 40px;
+  color: #444444;
 }
 
 .thirdChild{
 	padding: 10px 40px 10px 24px;	
 	background:url("../images/plans.png") no-repeat left;
 	line-height: 40px;
+  color: #444444;
 }
 
 .signIn{
 	margin-top: 13px;
 	padding: 0px;
 	line-height: 30px;
-	background-color: rgba(255,255,255,1);
-	background-image: -webkit-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
-	background-image: -moz-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
-	background-image: -ms-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
-	background-image: -o-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
-	background-image: linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
-	background-repeat: no-repeat;
-	-webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-	-moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-	box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
-	border: solid 1px rgba(0,0,0,0.88);
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	width: 78px;
-	height: 28px;
-	display: block;
-	font-family: "Roboto Bold";
-	line-height: 28px;
-	text-align: center;
-	color: rgba(255,255,255,1);
-	text-transform: capitalize;
-	text-shadow: 0px 0px 0px rgba(255,255,255,1)
+  text-decoration: none;
+  background-color: rgba(255,255,255,1);
+  background-image: -webkit-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
+  background-image: -moz-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
+  background-image: -ms-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
+  background-image: -o-linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
+  background-image: linear-gradient(top, rgba(148,148,148,1) 0%,rgba(61,61,61,1) 8%);
+  background-repeat: no-repeat;
+  -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,1);
+  border: solid 1px rgba(0,0,0,0.88);
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  width: 78px;
+  height: 28px;
+  display: block;
+  font-family: "Roboto Bold";
+  line-height: 28px;
+  text-align: center;
+  color: rgba(255,255,255,1);
+  text-transform: capitalize;
+  text-shadow: 0px 0px 0px rgba(255,255,255,1)
 }
 
 
@@ -299,6 +307,14 @@ a.translation{
   margin-right:0px;
 }
 
+.secondFold ul li a{
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 18px;
+  color:#ffffff;
+}
+
+
 .secondFold ul li img{
   padding-left: 23px;
 }
@@ -315,6 +331,7 @@ a.translation{
   font-size: 12px;
   line-height: 18px;
   color: #bbbbbb;
+  margin-bottom: 16px;
 }
 
 .secondfoldLine{
