--- a/assignment_7/css/style.css
+++ b/assignment_7/css/style.css
@@ -38,15 +38,15 @@ body {
 	display: block;
 	background: url("../images/logo.png") 0 0 no-repeat;
 	text-indent: -10000px;
-	margin: 58px 0px 0px 0px;	
+	margin: 57px 0px 0px 0px;	
 }
 
 
 
 .header ul{
 	float:right;
-	height: 60px;
-  margin-top: 50px;
+	height: 54px;
+  margin-top: 48px;
 }
 
 .header ul li{
@@ -70,14 +70,14 @@ body {
 
 
 .firstChild{
-	padding: 10px 17px 0px 18px;
+	padding: 10px 12px 0px 18px;
 	background:url("../images/home.png") no-repeat left;
 	line-height: 40px;
   color: #1a4da2;
 }
 
 .secondChild{
-	padding: 10px 18px 0px 18px;
+	padding: 10px 14px 0px 18px;
 	background:url("../images/how_it_works.png") no-repeat  left;
 	line-height: 40px;
   color: #1a4da2;
@@ -95,18 +95,17 @@ body {
 
 .newsearch{
   float: right;
-  padding-top: 15px;
+  padding-top: 17px;
 }
 
 .textInput{   
-  padding-left: 30px;
+  padding-left: 25px;
   padding-right: 20px;
-  margin-right: 6px;
   color: #000000;
   background: url("../images/search_icon.png") no-repeat left;
   background-position: left;
-  width: 130px;
-  height: 30px;
+  width: 122px;
+  height: 28px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -128,8 +127,8 @@ body {
 .path li{
   float: left;
   list-style: none;
-  padding-top: 10px;
-  margin-bottom: 51px;
+  padding-top:5px;
+  margin-bottom: 46px;
 }
 
 .path li a{
@@ -151,11 +150,13 @@ body {
 .path li:last-child a{
   color: #333333;
   background: none;
+  font-weight: bold;
+
 }
 
 .bangkokImage{
   float: left;
-  margin-right: 14px;
+  margin-right: 11px;
 }
 
 .bangkok{
@@ -174,7 +175,7 @@ body {
 .firstFoldNav li{
  float: left;
  list-style: none;
- padding: 20px 16px 0px 16px;
+padding: 25px 0px 0px 33px;
 
 
 }
@@ -207,14 +208,15 @@ body {
 
 
 .planIt{
-  padding: 10px 0px 0px 0px;
+  padding: 5px 0px 0px 0px;
   border: solid 1px #dedede;
-  width: 76px;
-  height: 27px;
+  width: 70px;
+  height: 25px;
   line-height: 30px;
   display: block;
   text-align: center;
   border-radius: 5px;
+  margin-top: 10px;
 }
 
 .palnIt {
@@ -224,7 +226,7 @@ body {
 .firstFoldBorderBottom{
   padding-bottom: 11px;
   border-bottom: 1px solid #dddddd;
-  margin-bottom: 41px;
+  margin-bottom: 28px;
 }
 
 /*========================== SECOND FOLD =======================*/
@@ -237,14 +239,14 @@ body {
 .sfLeft ul {
  list-style: none;
  text-decoration: none;
- padding-top: 27px;
+ padding-top: 19px;
 }
 
 .sfLeft ul li{
 
   padding-top: 14px;
   border-bottom: 1px solid #dddddd;
-  padding-bottom: 11px;
+  padding-bottom: 7px;
 }
 
 .sfLeft ul li:first-child{
@@ -272,7 +274,7 @@ a.sflFirstLink:hover{
 
 .sfLeft ul li img{
   float: left;
-  padding:7px 18px 0px 14px;
+  padding:4px 18px 0px 12px;
 }
 
 .sflSecondLink{
@@ -280,7 +282,7 @@ a.sflFirstLink:hover{
   font-family: Roboto Light;
   font-size: 12px;
   line-height: 20px;
-  padding-left: 55px;
+  padding-left: 46px;
   text-decoration:none;
   color: #878787;
 }
@@ -309,7 +311,7 @@ a.sflFirstLink:hover{
   box-shadow: inset 0 1px 3px rgba(0,0,0,.25);
   border: solid 1px #BBBBBB;
   margin-bottom: 10px;
-  margin-left: 10px;
+  margin-left: 16px;
   color:#000000;
   padding-left:9px;
   padding-right: 9px;
@@ -323,8 +325,8 @@ a.sflFirstLink:hover{
  line-height: 48px;
  color: #FF8000;
  font-family: Roboto Thin;
- padding-left: 12px;
- margin-bottom: 30px;
+ padding-left: 9px;
+ margin-bottom: 18px;
 
 }
 
@@ -336,13 +338,13 @@ a.sflFirstLink:hover{
   font-size: 14px;
   line-height: 17px;
   color: #666666;
-  margin-bottom: 44px;
+  margin-bottom: 29px;
 }
 
 #map_canvas {
-  margin-bottom: 20px;
-  width: 659px;
-  height: 302px;
+  margin-bottom: 19px;
+  width: 658px;
+  height: 301px;
   border:1px solid #e0dfdc;
   box-shadow: inset 0 1px 3px rgba(0,0,0,.25);
 }
@@ -352,13 +354,17 @@ a.sflFirstLink:hover{
 .travelOptions{
   font-family: Roboto Thin;
   font-size: 24px;
+  line-height: 38px;
+  color:#d54405; 
+}
+
+.travelOptionsText{
   line-height: 48px;
-  color:#d54405;
-  
+  padding-left: 9px;
 }
 
 .travelOptionsLine{
-  padding-bottom: 11px;
+ 
   border-bottom: 1px solid #e9e9e9;
 }
 
@@ -367,18 +373,17 @@ a.sflFirstLink:hover{
 }
 
 .byMode{
-  padding-bottom: 7px;
+  padding-bottom: 4px;
   border-bottom: 1px solid #f5f5f5;
 }
 
 .byMode img{
   float:left;
-  padding: 18px 40px 0px 15px;
+  padding: 18px 38px 0px 15px;
 }
 
 .byMode p{
-  float: right;
-  width: 560px;
+  width: 561px;
   font-size: 11px;
   line-height: 16px;
   color: #000000;
@@ -414,15 +419,23 @@ a.sflFirstLink:hover{
   font-size: 11px;
   line-height: 18px;
   background: url(../images/view_website.png) no-repeat right;
-  padding-right: 20px;
+  padding-right: 24px;
   text-decoration: none;
   color: #1a4da2;
 }
 
+.byModeSecondChild{
+  padding-bottom: 5px;
+}
+
+.byModeSecondChild p{
+  padding-bottom: 7px;
+}
+
 .travelHeading{
 
-  padding-top: 30px;
-  size:20px;
+  padding-top: 29px;
+  font-size:20px;
   line-height: 16.41px;
   color: #000000;
   font-family: Roboto Light;
@@ -436,7 +449,7 @@ a.sflFirstLink:hover{
   font-size: 16px;
   line-height: 16.41px;
   color: #111111;
-  margin-bottom: 15px;
+  margin-bottom: 18px;
 }
 
 .departureCity{
@@ -466,10 +479,11 @@ a.sflFirstLink:hover{
   float: right;
   font-family: Tahoma;
   font-size: 12px;
+  line-height: 18px;
   color: #1a4da2;
   padding-right: 20px;
   background: url(../images/route_planner_search.png) no-repeat right;
-  width: 180px;
+  width: 181px;
   height: 30px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
